[package]
name = "mev-share-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-share-rs = { git = "https://github.com/mattsse/mev-share-rs.git" }
ethers = "2.0.7"
hex = "0.4.3"
serde = { version = "1.0.1", features = ["derive"] }
serde_json = "1.0.97"
jsonrpsee = { version = "0.18.2", features = ["http-client", "client"] }
tower = "0.4.13"
hyper = { version = "0.14.26", features = ["stream"] }
futures-util = "0.3.28"
http = "0.2.9"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
log = "0.4.19"


